# wgpu_test

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  test.html
src/: camera.rs  instance.rs  lib.rs  light.wgsl  resources.rs  shader.wgsl  texture.rs
src/camera/: camera_controller.rs  camera_uniform.rs  mod.rs
src/light/: mod.rs
src/model/: material.rs  mesh.rs  mod.rs  model.rs
