[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = {version = "0.29", features = ["rwh_05"]}
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.1.0"


# wasm settings
cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = {version = "22.1.0", features = ["webgl"]}
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}
