[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.86"
fs_extra = "1.3.0"
glob = "0.3.1"

[dependencies]
winit = {version = "0.29", features = ["rwh_05"]}
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.0"
pollster = "0.3.0"
bytemuck = {version = "1.16.3", features = ["derive"]}
cfg-if = "1.0.0"
cgmath = "0.18.0"
anyhow = "1.0.86"
tobj = {version = "4.0.2", features = [
    "async",
]}

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

# wasm settings

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
reqwest = "0.12.7"
wgpu = {version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
